# lokin-role-builder

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  mypy.ini  pyproject.toml  ruff.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20250913_000001_init.py
app/: main.py
docs/: db-schema.md  ingestion-plan.md
src/role_builder/: config.py  db.py
src/role_builder/ingest/: cli.py  fts.py  loader.py  reader.py  schemas.py  transform.py
src/role_builder/models/: __init__.py  base.py  onet.py
tests/: test_ingest.py  test_search_basic.py
