[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lokin_role_builder"
version = "0.1.0"
description = "Role builder service with FastAPI, embeddings, and similarity utils"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "python-dotenv>=1.0",
  "loguru>=0.7",
  "sentence-transformers>=3.0",
  "scikit-learn>=1.5",
  "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-python-dateutil",
]

[tool.setuptools]
packages = ["lokin_role_builder", "lokin_role_builder.app", "lokin_role_builder.app.api", "lokin_role_builder.app.core", "lokin_role_builder.app.db", "lokin_role_builder.app.models", "lokin_role_builder.app.schemas", "lokin_role_builder.app.services", "lokin_role_builder.app.match", "lokin_role_builder.app.gen", "lokin_role_builder.app.utils", "lokin_role_builder.scripts", "lokin_role_builder.tests", "lokin_role_builder.config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

